added letter freq

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "c739c095",
    "metadata": {},
    "outputs": [
@@ -650,30 +650,34 @@
      "output_type": "stream",
      "text": [
       "slate\n",
-      "['yellow', 'gray', 'gray', 'gray', 'gray']\n",
-      "there\n",
       "['gray', 'gray', 'gray', 'gray', 'gray']\n",
       "word\n",
-      "PONGS\n",
-      "pongs\n",
+      "DOOMY\n",
+      "played\n",
+      "PLAYED\n",
+      "Not a valid word\n",
+      "plaid\n",
+      "['gray', 'gray', 'gray', 'gray', 'yellow']\n",
+      "ddoms\n",
+      "DDOMS\n",
+      "Not a valid word\n",
+      "dooms\n",
+      "['green', 'green', 'green', 'green', 'gray']\n",
+      "doomy\n",
       "['green', 'green', 'green', 'green', 'green']\n",
-      "PONGS\n",
+      "DOOMY\n",
       "Keep playing: y\n",
-      "[[3.0, 'ZYMIC'], [3.0, 'ZYMES'], [3.0, 'ZYGON'], [3.0, 'ZYGAL'], [3.0, 'ZUZIM'], [3.0, 'ZURFS'], [3.0, 'ZUPPA'], [3.0, 'ZUPAS'], [3.0, 'ZUPAN'], [3.0, 'ZULUS'], [3.0, 'ZOWIE'], [3.0, 'ZOWEE'], [3.0, 'ZOUKS'], [3.0, 'ZORSE'], [3.0, 'ZORRO'], [3.0, 'ZORIS'], [3.0, 'ZORIL'], [3.0, 'ZOPPO'], [3.0, 'ZOPPA'], [3.0, 'ZOOTY']]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 114\u001b[0m\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    113\u001b[0m         random_word \u001b[38;5;241m=\u001b[39m choose_new_word(used_words, words)\n\u001b[1;32m--> 114\u001b[0m         \u001b[43mplay_game\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom_word\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupper\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;28mprint\u001b[39m(used_words)\n\u001b[0;32m    116\u001b[0m \u001b[38;5;28mprint\u001b[39m(total_guessed)\n",
-      "Cell \u001b[1;32mIn[17], line 52\u001b[0m, in \u001b[0;36mplay_game\u001b[1;34m(word)\u001b[0m\n\u001b[0;32m     49\u001b[0m guessed \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m guessed \u001b[38;5;241m!=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m count_guesses \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m6\u001b[39m:\n\u001b[1;32m---> 52\u001b[0m     guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mstrip()\u001b[38;5;241m.\u001b[39mupper()\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m guess \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWORD\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     54\u001b[0m         \u001b[38;5;28mprint\u001b[39m(word)\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py:1175\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_allow_stdin:\n\u001b[0;32m   1172\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(\n\u001b[0;32m   1173\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1174\u001b[0m     )\n\u001b[1;32m-> 1175\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1176\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1177\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1178\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1179\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1180\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py:1217\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1214\u001b[0m             \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m   1215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1216\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m-> 1217\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[0;32m   1218\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1219\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+      "[[4.0, 'ZYMIC'], [4.0, 'ZYMES'], [4.0, 'ZYGON'], [4.0, 'ZYGAL'], [4.0, 'ZUZIM'], [4.0, 'ZURFS'], [4.0, 'ZUPPA'], [4.0, 'ZUPAS'], [4.0, 'ZUPAN'], [4.0, 'ZULUS'], [4.0, 'ZOWIE'], [4.0, 'ZOWEE'], [4.0, 'ZOUKS'], [4.0, 'ZORSE'], [4.0, 'ZORRO'], [4.0, 'ZORIS'], [4.0, 'ZORIL'], [4.0, 'ZOPPO'], [4.0, 'ZOPPA'], [4.0, 'ZOOTY']]\n",
+      "zebra\n",
+      "['green', 'gray', 'gray', 'gray', 'gray']\n",
+      "prays\n",
+      "['gray', 'gray', 'gray', 'yellow', 'gray']\n",
+      "zymic\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "ZYMIC\n",
+      "Keep playing: n\n",
+      "{'DOOMY': 4, 'ZYMIC': 3}\n",
+      "{'F': 0, 'G': 0, 'H': 0, 'J': 0, 'K': 0, 'N': 0, 'Q': 0, 'U': 0, 'V': 0, 'W': 0, 'X': 0, 'B': 1, 'C': 1, 'D': 1, 'L': 1, 'O': 1, 'R': 1, 'T': 1, 'Z': 1, 'A': 2, 'E': 2, 'I': 2, 'M': 2, 'P': 2, 'S': 2, 'Y': 2}\n"
      ]
     }
    ],
@@ -792,14 +796,184 @@
     "    else:\n",
     "        random_word = choose_new_word(used_words, words)\n",
     "        play_game(random_word.upper())\n",
+    "        \n",
+    "total_guessed = {key: value for key, value in sorted(total_guessed.items(), key=lambda item: item[1])}\n",
+    "\n",
     "print(used_words)\n",
     "print(total_guessed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8a9b03f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slate\n",
+      "['yellow', 'gray', 'gray', 'gray', 'yellow']\n",
+      "word\n",
+      "ONDES\n",
+      "cones\n",
+      "['gray', 'yellow', 'yellow', 'green', 'green']\n",
+      "ondes\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "ONDES\n",
+      "Keep playing: y\n",
+      "[[1.61, 'DIZZY'], [1.56, 'ENEMY'], [1.56, 'DAZES'], [1.54, 'ENJOY'], [1.54, 'EMERY'], [1.53, 'FEZZY'], [1.53, 'ENVOY'], [1.53, 'DOWRY'], [1.53, 'DOWNY'], [1.53, 'DANNY'], [1.52, 'DONNY'], [1.51, 'DEITY'], [1.51, 'DECRY'], [1.51, 'DECOY'], [1.51, 'DEAWY'], [1.51, 'DEARY'], [1.51, 'DAMPY'], [1.51, 'DAISY'], [1.51, 'DAIRY'], [1.5, 'EMBOX']]\n",
+      "fizzy\n",
+      "['gray', 'green', 'green', 'green', 'green']\n",
+      "dazed\n",
+      "['green', 'gray', 'green', 'gray', 'yellow']\n",
+      "dizzy\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "DIZZY\n",
+      "Keep playing: y\n",
+      "[[1.65, 'DONNY'], [1.64, 'ENJOY'], [1.64, 'EMPTY'], [1.63, 'ENVOY'], [1.63, 'DUNNY'], [1.63, 'DONSY'], [1.62, 'ENEMY'], [1.62, 'EMERY'], [1.62, 'EBONY'], [1.62, 'DUPPY'], [1.62, 'DUMPY'], [1.62, 'DANNY'], [1.61, 'DRONY'], [1.6, 'EPOXY'], [1.6, 'EENSY'], [1.6, 'DOOZY'], [1.6, 'DERNY'], [1.59, 'EVERY'], [1.59, 'DOWNY'], [1.59, 'DAPPY']]\n",
+      "donny\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "DONNY\n",
+      "Keep playing: y\n",
+      "[[1.43, 'DAZES'], [1.33, 'FEZZY'], [1.3, 'FUZZY'], [1.3, 'FAZES'], [1.26, 'FIZZY'], [1.25, 'DEVIS'], [1.25, 'DAZER'], [1.25, 'DAZED'], [1.24, 'DEXES'], [1.24, 'DAWKS'], [1.24, 'DAWGS'], [1.24, 'DAWDS'], [1.24, 'DAVIT'], [1.23, 'DOUMS'], [1.22, 'EAVES'], [1.22, 'DOWRY'], [1.22, 'DAULT'], [1.22, 'DAUDS'], [1.21, 'DOZES'], [1.2, 'ENVOY']]\n",
+      "dazes\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "DAZES\n",
+      "Keep playing: y\n",
+      "[[1.18, 'DISME'], [1.17, 'POWNY'], [1.17, 'DROME'], [1.16, 'DORMS'], [1.15, 'PRUNY'], [1.15, 'EXOME'], [1.15, 'DSOMO'], [1.12, 'DUOMO'], [1.12, 'DUOMI'], [1.12, 'DOOMS'], [1.11, 'ELOPE'], [1.1, 'DORMY'], [1.1, 'DERMA'], [1.09, 'DERMS'], [1.08, 'OZONE'], [1.08, 'NOWTY'], [1.08, 'FUZZY'], [1.08, 'DHONI'], [1.07, 'POUTY'], [1.07, 'POUSY']]\n",
+      "disme\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "DISME\n",
+      "Keep playing: y\n",
+      "[[1.07, 'POWNY'], [1.03, 'ROUPY'], [1.03, 'POUTY'], [1.02, 'NOWTY'], [1.01, 'PRUNY'], [1.01, 'POUSY'], [1.0, 'PLUTY'], [1.0, 'MOUSY'], [1.0, 'LOUSY'], [1.0, 'LOURY'], [0.99, 'DOWNY'], [0.98, 'LOWRY'], [0.98, 'FEZZY'], [0.98, 'ENVOY'], [0.97, 'POZZY'], [0.97, 'POWSY'], [0.97, 'DOWRY'], [0.96, 'DRUXY'], [0.95, 'FUZZY'], [0.93, 'FIZZY']]\n",
+      "powny\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "POWNY\n",
+      "Keep playing: y\n",
+      "[[0.94, 'MOUSY'], [0.94, 'LOUSY'], [0.94, 'LOURY'], [0.92, 'FEZZY'], [0.91, 'MYOPY'], [0.9, 'FIZZY'], [0.89, 'LUVVY'], [0.89, 'FUZZY'], [0.88, 'NURTZ'], [0.87, 'NUTTY'], [0.87, 'NUTSY'], [0.87, 'MUSTY'], [0.87, 'MUSSY'], [0.87, 'MOPPY'], [0.87, 'MOONY'], [0.87, 'DRUXY'], [0.86, 'MURRY'], [0.86, 'MOTTY'], [0.86, 'LUSTY'], [0.86, 'LOPPY']]\n",
+      "scape\n",
+      "['yellow', 'gray', 'gray', 'gray', 'gray']\n",
+      "mousy\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "MOUSY\n",
+      "Keep playing: y\n",
+      "[[0.75, 'FEZZY'], [0.72, 'FUZZY'], [0.71, 'FIZZY'], [0.62, 'NOUNS'], [0.6, 'NUTTY'], [0.6, 'DUOMO'], [0.6, 'DSOMO'], [0.59, 'NUTSY'], [0.59, 'EPOXY'], [0.59, 'DOOZY'], [0.57, 'NURTZ'], [0.57, 'ENTRY'], [0.57, 'DRUXY'], [0.57, 'DOOMS'], [0.56, 'NOUPS'], [0.56, 'ENZYM'], [0.56, 'DUPES'], [0.56, 'DROIT'], [0.56, 'DOTTY'], [0.55, 'DOTES']]\n",
+      "slate\n",
+      "['gray', 'gray', 'gray', 'gray', 'yellow']\n",
+      "brake\n",
+      "['gray', 'gray', 'gray', 'gray', 'yellow']\n",
+      "wrath\n",
+      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
+      "mazer\n",
+      "['gray', 'gray', 'green', 'yellow', 'gray']\n",
+      "quack\n",
+      "['gray', 'gray', 'gray', 'gray', 'gray']\n",
+      "heard\n",
+      "['gray', 'green', 'gray', 'gray', 'gray']\n",
+      "FEZZY\n",
+      "Keep playing: y\n",
+      "[[5.39, 'SCUZZ'], [5.37, 'TARZY'], [5.35, 'LEZZY'], [5.27, 'MESYL'], [5.26, 'SATYR'], [5.26, 'MAUZY'], [5.25, 'TERZA'], [5.24, 'OCTYL'], [5.24, 'HEXYL'], [5.23, 'PAUXI'], [5.23, 'OFAYS'], [5.23, 'NAZZY'], [5.23, 'MEZZO'], [5.23, 'LEZZO'], [5.22, 'GAUZY'], [5.21, 'NATYA'], [5.2, 'WAGYU'], [5.2, 'SEIZE'], [5.2, 'SEIZA'], [5.2, 'SDAYN']]\n",
+      "slate\n",
+      "['green', 'gray', 'gray', 'gray', 'gray']\n",
+      "scuba\n",
+      "['green', 'green', 'green', 'gray', 'gray']\n",
+      "scuzz\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "SCUZZ\n",
+      "Keep playing: y\n",
+      "[[5.31, 'LEZZY'], [4.89, 'LEZZO'], [4.78, 'LEZZA'], [4.62, 'HEXYL'], [4.56, 'JAZZY'], [4.28, 'MEZZO'], [4.17, 'MEZZE'], [4.17, 'MEZZA'], [4.17, 'LAZZO'], [4.14, 'LAZZI'], [4.04, 'NAZZY'], [3.9, 'FUZZY'], [3.88, 'FIZZY'], [3.87, 'HUZZY'], [3.74, 'BEZZY'], [3.64, 'TAZZE'], [3.64, 'TAZZA'], [3.46, 'HUZZA'], [3.45, 'HERYE'], [3.42, 'LEEZE']]\n",
+      "lezzy\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "LEZZY\n",
+      "Keep playing: y\n",
+      "[[3.72, 'FEEZE'], [3.72, 'FEAZE'], [3.51, 'BEZZY'], [3.36, 'GAUZY'], [3.31, 'HEXYL'], [3.27, 'FUZZY'], [3.25, 'FIZZY'], [3.23, 'DEXYS'], [3.22, 'DEOXY'], [3.02, 'GAUZE'], [3.01, 'HEEZE'], [2.99, 'FLUYT'], [2.94, 'HERYE'], [2.94, 'FURZY'], [2.93, 'AFIZZ'], [2.87, 'HAMZA'], [2.85, 'FROYO'], [2.84, 'FLAXY'], [2.8, 'DECYL'], [2.8, 'CETYL']]\n",
+      "feeze\n",
+      "['green', 'green', 'green', 'green', 'green']\n",
+      "FEEZE\n",
+      "Keep playing: n\n"
+     ]
+    }
+   ],
+   "source": [
+    "def word_to_numbers(word):\n",
+    "    # Include both the letter position and its frequency in the gameplay\n",
+    "    word = word.lower()\n",
+    "    return [ord(char) - ord('a') + 1 for char in word]\n",
+    "\n",
+    "def letter_frequency(word, letter_frequency):\n",
+    "    sum_freq = sum(letter_frequency[letter] for letter in word.upper())\n",
+    "    return sum_freq * 0.05\n",
+    "\n",
+    "def choose_new_word(dic, test, letter_freqs):\n",
+    "    # Prepare training data with updated features\n",
+    "    X_train = np.array([word_to_numbers(key) for key in dic.keys()])\n",
+    "    y_train = np.array([value - letter_frequency(key, letter_freqs) for key, value in dic.items()])\n",
+    "    \n",
+    "    # Prepare testing data with updated features\n",
+    "    X_test = np.array([word_to_numbers(word) for word in test])\n",
+    "\n",
+    "    # Initialize and train the model\n",
+    "    model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Make predictions and evaluate\n",
+    "    predictions = model.predict(X_test)\n",
+    "    \n",
+    "    hard_words = []\n",
+    "\n",
+    "    # Print the predictions with the associated words\n",
+    "    for word, prediction in zip(test, predictions):\n",
+    "        hard_words.append([round(prediction, 2), word])\n",
+    "    hard_words.sort(reverse = True)\n",
+    "    print(hard_words[:20])\n",
+    "    return hard_words[0][1]\n",
+    "\n",
+    "# Modify the main game loop to pass letter frequencies to choose_new_word\n",
+    "random_word = words[random.randint(0, len(words))].upper()\n",
+    "play_game(random_word)\n",
+    "play = True\n",
+    "while play == True:\n",
+    "    print(\"Keep playing: \", end = \"\")\n",
+    "    keep_playing = input()\n",
+    "    if keep_playing.lower() != \"y\":\n",
+    "        play = False\n",
+    "        break\n",
+    "    else:\n",
+    "        random_word = choose_new_word(used_words, words, total_guessed)\n",
+    "        play_game(random_word.upper())\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f2883c04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def letter_frequency(word, letter_frequency):\n",
+    "    sum_freq = sum(letter_frequency[letter] for letter in word.upper())\n",
+    "    return sum_freq * 0.05\n",
+    "    \n",
+    "freq = {'F': 0, 'G': 0, 'H': 0, 'J': 0, 'K': 0, 'N': 0, 'Q': 0, 'U': 0, 'V': 0, 'W': 0, 'X': 0, 'B': 1, 'C': 1, 'D': 1, 'L': 1, 'O': 1, 'R': 1, 'T': 1, 'Z': 1, 'A': 2, 'E': 2, 'I': 2, 'M': 2, 'P': 2, 'S': 2, 'Y': 2}\n",
+    "word = 'slate'\n",
+    "print(letter_frequency(word, freq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4c62efb",
    "metadata": {},
    "outputs": [],
    "source": []
