allows games to be resumed

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1052,8 +1052,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "800ab51d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 'last_word' added to 'game_data' table.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import os\n",
+    "\n",
+    "def add_column_to_game_data():\n",
+    "    database_path = 'C:/Users/stanl/Desktop/AI Game/Wordle/db/users.db'\n",
+    "    \n",
+    "    with sqlite3.connect(database_path) as conn:\n",
+    "        cur = conn.cursor()\n",
+    "        # Add a new column named 'timestamp' to the 'game_data' table\n",
+    "        cur.execute('''\n",
+    "            ALTER TABLE users\n",
+    "            ADD COLUMN last_word TEXT;\n",
+    "        ''')\n",
+    "        conn.commit()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    add_column_to_game_data()\n",
+    "    print(\"Column 'last_word' added to 'game_data' table.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d5482997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_unsuccessful_game_data(user_id):\n",
+    "    database_path = 'C:/Users/stanl/Desktop/AI Game/Wordle/db/users.db'\n",
+    "    \n",
+    "    with sqlite3.connect(database_path) as conn:\n",
+    "        cur = conn.cursor()\n",
+    "        \n",
+    "        # Retrieve all guesses for that user_id up until the last true\n",
+    "        cur.execute('''\n",
+    "            SELECT guess, game_over FROM game_data\n",
+    "            WHERE user_id = ?\n",
+    "            ORDER BY ROWID DESC;\n",
+    "        ''', (user_id,))\n",
+    "        all_entries = cur.fetchall()\n",
+    "\n",
+    "        guesses = []\n",
+    "        word = get_last_word(user_id)\n",
+    "        for i in range(len(all_entries)):\n",
+    "            guess, game_over = all_entries[i][0], all_entries[i][1]\n",
+    "            if game_over and i != 0:\n",
+    "                break\n",
+    "            else:\n",
+    "                guesses.append(guess)\n",
+    "                \n",
+    "        last_game = all_entries[0][1]\n",
+    "        \n",
+    "        print(last_game)\n",
+    "        print(guesses[0])\n",
+    "        print(word)\n",
+    "\n",
+    "        if word != guesses[0] and last_game == 0 or (word == guesses[0] and last_game == 1):\n",
+    "            return list(reversed(guesses)), word\n",
+    "        else:\n",
+    "            return [], word\n",
+    "        \n",
+    "def get_last_word(user_id):\n",
+    "    database_path = 'C:/Users/stanl/Desktop/AI Game/Wordle/db/users.db'\n",
+    "    \n",
+    "    with sqlite3.connect(database_path) as conn:\n",
+    "        cur = conn.cursor()\n",
+    "        cur.execute('''\n",
+    "            SELECT last_word FROM users\n",
+    "            WHERE id = ?;\n",
+    "        ''', (user_id,))\n",
+    "        word = cur.fetchall()\n",
+    "        return word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2b308936",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "QUIPO\n",
+      "[('QUIPO',)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([], [('QUIPO',)])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_unsuccessful_game_data(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13325bde",
    "metadata": {},
    "outputs": [],
    "source": []
