--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "d5482997",
    "metadata": {},
    "outputs": [],
@@ -1119,9 +1119,9 @@
     "        \n",
     "        print(last_game)\n",
     "        print(guesses[0])\n",
-    "        print(word)\n",
+    "        print(word[0][0])\n",
     "\n",
-    "        if word != guesses[0] and last_game == 0 or (word == guesses[0] and last_game == 1):\n",
+    "        if word[0][0] != guesses[0] and last_game == 0 or (word[0][0] == guesses[0] and last_game == 1):\n",
     "            return list(reversed(guesses)), word\n",
     "        else:\n",
     "            return [], word\n",
@@ -1141,8 +1141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "2b308936",
+   "execution_count": 44,
+   "id": "10e749de",
    "metadata": {},
    "outputs": [
     {
@@ -1151,16 +1151,16 @@
      "text": [
       "1\n",
       "QUIPO\n",
-      "[('QUIPO',)]\n"
+      "QUIPO\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "([], [('QUIPO',)])"
+       "(['HELLO', 'QUAIL', 'QUIPO'], [('QUIPO',)])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13325bde",
+   "id": "52ba2a77",
    "metadata": {},
    "outputs": [],
    "source": []
