added win streaks

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "d5482997",
    "metadata": {},
    "outputs": [],
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "10e749de",
    "metadata": {},
    "outputs": [
@@ -1149,18 +1149,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "QUIPO\n",
-      "QUIPO\n"
+      "0\n",
+      "PROUD\n",
+      "PHYNX\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(['HELLO', 'QUAIL', 'QUIPO'], [('QUIPO',)])"
+       "(['SPIRE', 'PROUD'], [('PHYNX',)])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "52ba2a77",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09709eb",
+   "id": "9de4a828",
    "metadata": {},
    "outputs": [],
    "source": []
